--- a/html/BlindTest/index.html
+++ b/html/BlindTest/index.html
@@ -17,8 +17,9 @@
             <h2>00 / Points</h2>
             <h2>... / Users</h2>
         </div>
-   
+
     <div class="container-block">
+
         <div class="audioContainer">
             <div class="deco-Img">    
         </div>
@@ -26,7 +27,7 @@
         <p id="timeRemaining">Il reste 10 secondes de musique </p>
 
         <div class="myAudio">
-            <audio id="track" autoplay> <source src="{{ .Track.PreviewURL }}" type="audio/mpeg"> </audio>
+            <audio id="track" autoplay> <source src="{{ .DatasgameBlindTest.Track.PreviewURL }}" type="audio/mpeg"> </audio>
         </div>
 
          <div class="container">
@@ -37,15 +38,30 @@
             <div class="wave"></div>
          </div>
       
-        <form action="/BlindTestHandler" method="post">
+        <form action="/Blindtest" method="post">
             <div class="inputContainer">
                 <input class="myInput" type="text" name="value" placeholder="Votre réponse">
             </div> 
-            <button  class="mybtn" type="submit">Valider</button>
+            <button  class="mybtn" type="submit" name="action" value="BlindTest">Valider</button>
         </form>
     </div>
 
+    <div class="lyrics">
+        <form action="/Blindtest" method="post" style="display: inline;">
+        <div class="divParoles">
+            Chat message🖊
+            <br>
+            {{range $index, $message := .Info}}
+            {{$message.Username}}: {{$message.TextMessage}}<button class="DeleteBtn" type="submit" name="action" value="DeleteMessage">🗑</button>
+            <input type="hidden" name="messageIndex" value="{{$index}}">
+            {{end}}
+            <br>
+                <input class="myInput" name="Message" id="Message" placeholder="écrivez votre message" type="text">
+                <button name="action" value="ChatMessage" class="mybtnMessage">Envoyer</button>
+            </form>
+        </div>
+
+    </div>
     <script src="/static/js/blindTestTimer.js"></script>
 </body>
-
 </html>
