--- a/html/BlindTest/CreatePrivateRoom.html
+++ b/html/BlindTest/CreatePrivateRoom.html
@@ -15,6 +15,8 @@
     <h1 class="title-top">Blind Test</h1>
     
     <form id="CreateRoom" action="/CreateBlindtestHandler" method="post">
+        <input type="text" name="roomName" placeholder="Nom de votre serveur" required>
+        <input type="number" name="maxPlayer" placeholder="Nombre de joueur maximum" required>
         <input type="number" name="gameTurns" placeholder="Nombre de tours">
         <input type="number" name="musicDuration" placeholder="Durée des extraits (en secondes)">
         <input type="number" name="answerDuration" placeholder="Temps de réponse après la fin de la musique (en secondes)">
